# TranscriptSeek

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  RELEASE_GAPS.md  THREAT_MODEL.md
scripts/: build_sidecar.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/transcriptseek/: __init__.py  analyzers.py  crypto.py  exporters.py  importers.py  ipc.py  models.py  redaction.py  schema.py  semantic.py  vault.py
src/transcriptseek/schemas/: Codebook.xsd
src/ui/: App.tsx  service.ts  styles.css  types.ts
src/ui/components/: AnalysisPanel.tsx  PrivacyStatus.tsx  SearchPanel.tsx  TranscriptPanel.tsx  WelcomeScreen.tsx  Workspace.tsx
tests/: test_analyzers.py  test_crypto.py  test_importers.py  test_ipc.py  test_models.py  test_vault.py
